--- a/app/content/security/SCS/01.yml
+++ b/app/content/security/SCS/01.yml
@@ -12,3 +12,4 @@ Asset protection and resilience:
           - "USA - Safe Harbor"
           - "Other countries with data protection treaties"
           - "Other countries"
+      - type: assurance
