--- a/app/content/security/SCS/04.yml
+++ b/app/content/security/SCS/04.yml
@@ -9,3 +9,4 @@ Incident management:
         validation: boolean
         errorMessage: ""
         errorSummaryMessage: ""
+      - type: assurance
