--- a/app/content/security/SCS/07.yml
+++ b/app/content/security/SCS/07.yml
@@ -9,3 +9,4 @@ Supply-chain security:
         validation: boolean
         errorMessage: ""
         errorSummaryMessage: ""
+      - type: assurance
