--- a/app/content/security/SaaS/13.yml
+++ b/app/content/security/SaaS/13.yml
@@ -10,6 +10,7 @@ Secure use of the service by the customer:
           - "Corporate/enterprise devices"
           - "Partner devices"
           - "Unknown devices"
+      - type: assurance
   "Do you provide user or administrator training on the use of the service and its security?":
     requirements: The consumer can educate those administrating and using the service in how to use it safely and securely.
     filters: The consumer can educate those administrating and using the service in how to use it safely and securely.
@@ -20,3 +21,4 @@ Secure use of the service by the customer:
         validation: boolean
         errorMessage: ""
         errorSummaryMessage: ""
+      - type: assurance
