--- a/app/content/security/PaaS-IaaS/08.yml
+++ b/app/content/security/PaaS-IaaS/08.yml
@@ -9,6 +9,7 @@ Authentication of consumers to management interfaces and within support channels
         validation: boolean
         errorMessage: ""
         errorSummaryMessage: ""
+      - type: assurance
   "Can only authorised individuals from the consumer organisation perform actions affecting the consumer’s service through support channels?":
     requirements: The consumer has sufficient confidence that only authorised individuals from the consumer organisation are able to perform actions affecting the consumer’s service through support channels.
     filters: The consumer has sufficient confidence that only authorised individuals from the consumer organisation are able to perform actions affecting the consumer’s service through support channels.
@@ -19,6 +20,7 @@ Authentication of consumers to management interfaces and within support channels
         validation: boolean
         errorMessage: ""
         errorSummaryMessage: ""
+      - type: assurance
 Separation and access control within management interfaces:
   "Can consumers manage only their own service, and not access, modify or otherwise affect the service of other consumers via management tools and interfaces?":
     requirements: The consumer has sufficient confidence that other consumers cannot access, modify or otherwise affect their service management.
@@ -30,6 +32,7 @@ Separation and access control within management interfaces:
         validation: boolean
         errorMessage: ""
         errorSummaryMessage: ""
+      - type: assurance
   "Does your service support consumers in implementing the ‘principle of least privilege’ by providing the ability to constrain permissions given to consumer administrators?":
     requirements: The consumer can manage the risks of their own privileged access, e.g. through ‘principle of least privilege’, providing the ability to constrain permissions given to consumer administrators.
     filters: The consumer can manage the risks of their own privileged access, e.g. through ‘principle of least privilege’, providing the ability to constrain permissions given to consumer administrators.
@@ -40,6 +43,7 @@ Separation and access control within management interfaces:
         validation: boolean
         errorMessage: ""
         errorSummaryMessage: ""
+      - type: assurance
   "Do you inform consumers which networks, management interfaces are exposed to and what functionality is available via those interfaces?":
     requirements: The consumer understands how management interfaces are protected (see Principle 11) and what functionality is available via those interfaces.
     filters: The consumer understands how management interfaces are protected (see Principle 11) and what functionality is available via those interfaces.
@@ -50,3 +54,4 @@ Separation and access control within management interfaces:
         validation: boolean
         errorMessage: ""
         errorSummaryMessage: ""
+      - type: assurance
