--- a/app/content/security/PaaS-IaaS/10.yml
+++ b/app/content/security/PaaS-IaaS/10.yml
@@ -9,6 +9,7 @@ External interface protection:
         validation: boolean
         errorMessage: ""
         errorSummaryMessage: ""
+      - type: assurance
   "What method of interconnection do you provide?":
     requirements: The consumer understands what physical and logical interfaces their information is available from.
     filters: The consumer understands what physical and logical interfaces their information is available from.
@@ -21,6 +22,7 @@ External interface protection:
           - "PSN WAN"
           - "Private WAN"
           - "Internet and Private WAN"
+      - type: assurance
   "Do you provide access control of the data, to the service for consumers?":
     requirements: The consumer has sufficient confidence that protections are in place to control access to their data.
     filters: The consumer has sufficient confidence that protections are in place to control access to their data.
@@ -31,6 +33,7 @@ External interface protection:
         validation: boolean
         errorMessage: ""
         errorSummaryMessage: ""
+      - type: assurance
   "Do you provide authentication and authorisation to the service for all functions?":
     requirements: The consumer has sufficient confidence that the service can determine the identity of connecting users and services to an appropriate level for the data or function being accessed.
     filters: The consumer has sufficient confidence that the service can determine the identity of connecting users and services to an appropriate level for the data or function being accessed.
@@ -41,3 +44,4 @@ External interface protection:
         validation: boolean
         errorMessage: ""
         errorSummaryMessage: ""
+      - type: assurance
