--- a/app/content/security/SCS/05.yml
+++ b/app/content/security/SCS/05.yml
@@ -12,3 +12,4 @@ Personnel security:
           - "Baseline personnel security standard (BPSS)"
           - "Background checks in accordance with BS7858:2012"
           - "Employment checks"
+      - type: assurance
